@@ -1,3 +1,17 @@
+plugin: user-interact-verify
+name: keys/lock-screen
+requires:
+ device.category == 'KEYBOARD'
+_description:
+ PURPOSE:
+     This test will test the screen lock key
+ STEPS:
+     1. Press the screen lock buttons on the keyboard
+     2. If the screen is locked, move the mouse or press any key to activate the prompt
+     3. Input the password to unlock the screen
+ VERIFICATION:
+     Did the screen be locked following to your key presses?
+
 plugin: manual
 name: keys/brightness
 requires: dmi.product in ['Notebook','Laptop','Portable']
