@@ -18,7 +18,11 @@ checkbox (0.16.13) UNRELEASED; urgency=low
   [ Jeff Marcom ]
   * scripts/network - added iperf test benchmark testing capabilities. 
  
- -- Brendan Donegan <brendan.donegan@canonical.com>  Sat, 05 Oct 2013 11:18:17 +0100
+  [ Taihsiang Ho ]
+  * checkbox-old/jobs/keys.txt.in - added keys/lock-screen job to test
+    lock screen key.
+
+ -- Taihsiang Ho <taihsiang.ho@canonical.com>  Mon, 14 Oct 2013 17:35:23 -0400
 
 checkbox (0.16.12) saucy; urgency=low
 
